cmake_minimum_required(VERSION 3.0.0)
project(NewtonIterationFractal VERSION 0.1.0)
set(GLEW_LIB_DIR "D:/glew-2.2.0/lib/Release/x64")
set(GLEW_LIB_INCLUDE "D:/glew-2.2.0include/GL")

set(GLEW_LIB ${GLEW_LIB_DIR}/glew32.lib)
#include_directories(lib)
#link_libraries("EasyXa")
#link_libraries("EasyXw")
add_executable(NewtonIterationFractal main.cpp)
target_link_libraries(NewtonIterationFractal ${GLEW_LIB})
target_include_directories(NewtonIterationFractal PUBLIC ${GLEW_LIB_INCLUDE})
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})